# gbpp

./: .clang-format  .justfile  CMakeLists.txt  README.md
src/: dmg.cpp  dmg.h  main.cpp
src/dmg/: 00opcodes.cpp  01opcodes.cpp  10opcodes.cpp  11opcodes.cpp  dmg.cpp  dmg.h
tests/: Init.cpp
